Reject infinite-start ranges for ivarator queries